# cancer_research

./: .dockerignore  .env.example  .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  FIGURES.yaml  LICENSE  MANIFEST.sha256  MODEL_CARD.md  Makefile  PREREGISTRATION.md  PROVENANCE.yaml  README.md  SECURITY.md  flake.nix  package-lock.json  pyproject.toml  requirements-dashboard.txt  requirements-lock.txt  requirements.txt  shell.nix
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
analysis/: arbatskiy-cross-validation.md  cited_open_access_recovery_results.csv  cited_reference_fulltext_gaps.csv  collaborator-brief.md  contribution-plan-2026.md  convergence-map.md  corpus-duplicate-audit.md  deep-pattern-analysis.md  designed-combinations.md  diagnostic-therapy-audit.md  diagnostic-therapy-layer-notes.md  diagnostic-therapy-pilot.csv  distilled-hypotheses-final.md  evidence-adjudication-protocol.md  evidence-audit-notes.md  evidence-audit-sampling.md  evidence-coverage-audit.md  evidence-gold-embedding-eval.json  evidence-gold-embedding-eval.md  evidence-gold-embeddings.npz  evidence-gold-eval.md  evidence-gold-labels-v1.csv  evidence-gold-mesh-eval.md  evidence-gold-set-v1-retag.csv  evidence-gold-set-v1.csv  evidence-gold-set-v2.csv  evidence-labeling-guidelines-v2.md  evidence-tiers.md  fulltext_audit.csv  fulltext_retry_results.csv  gap-analysis.md  headline-sensitivity-report.md  headline-uncertainty-penetration-report.md  headline-uncertainty-report.md  headline-uncertainty-tme-report.md  hypothesis-sdt-ferroptosis-icd.md  identifiability-report.json  identifiability-report.md  key-findings.md  landmark-corpus-gaps.md  (+43 more)
article/: AUTHORING.md  book-outline.md
corpus/: INDEX.jsonl
docs/: EXPLAINER.md  index.html
news/: NEWS_INDEX.jsonl  README.md
plans/: fetch-scripts-plan.md  project-status-and-next-steps.md  research-sources-and-directory-plan.md  simulation-suite-v2-plan.md
scripts/: abc_joint_posterior.py  abc_posterior.py  analyze_corpus.py  article_io.py  build_index.py  build_news_index.py  calibrate_erastin.py  calibrate_kill_switch.py  calibrate_pk.py  compute_inter_rater_agreement.py  config.py  convert_citations_to_footnotes.py  dashboard.py  dashboard_data.py  detect_corpus_duplicates.py  diagnostic_therapy_audit.py  embed_evidence_leg.py  embed_gold_set.py  enrich_metadata.py  evaluate_evidence_gold_set.py  evidence_utils.py  extract_claims.py  fetch_acsl4_prevalence.py  fetch_articles.py  fetch_calibration_data.py  fetch_news.py  fetch_semantic_scholar.py  generate_3d_comparison_table.py  generate_conceptual_diagrams.py  generate_figures.py  generate_latex.py  generate_release_manifest.py  headline_sensitivity.py  headline_uncertainty.py  icb_param_map.py  identifiability_report.py  landmark_coverage.py  living_review_update.py  mechanism_recall.py  oa_bias_analysis.py  (+24 more)
simulations/: Cargo.toml  INVIVO_RESULTS.md  README.md  rust-toolchain.toml  simulation_results.json  simulation_results_v1_ground_truth.json  tune.py
simulations/.cargo/: config.toml
simulations/calibration/: 3d_validation_report.md  CALIBRATION_STATUS.md  README.md  calibrate.py  calibration_report.md  cross_validate_odes.py  parameter_provenance.md  targets.yaml
simulations/calibration/biofvm/: README.md  biofvm_rd_check.cpp
simulations/ferroptosis-core/: Cargo.toml  LICENSE  README.md
simulations/ferroptosis-core/examples/: basic_usage.rs  rd_field_dump.rs
simulations/ferroptosis-core/src/: acsl4.rs  alox.rs  biochem.rs  cell.rs  clonal.rs  contact.rs  copper.rs  dose_schedule.rs  drug_transport.rs  grid.rs  ifngamma.rs  immune.rs  immune_3d.rs  immune_spatial.rs  io.rs  lib.rs  nutrient.rs  oxygen.rs  params.rs  persister.rs  ph.rs  phenotype_mufa.rs  photosensitizer_pk.rs  physics.rs  reaction_diffusion.rs  repair.rs  senescence.rs  slab.rs  spheroid.rs  stats.rs  stromal.rs  trigger_wave.rs  tumor_pk.rs  vasculature.rs
simulations/ferroptosis-ffi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
simulations/ferroptosis-ffi/include/: ferroptosis.h
simulations/ferroptosis-ffi/src/: lib.rs
simulations/ferroptosis-ffi/tests/: test_ffi.c
simulations/ferroptosis-python/: Cargo.toml  README.md  pyproject.toml  test_bindings.py
simulations/ferroptosis-python/examples/: parameter_sweep.py
simulations/ferroptosis-python/src/: lib.rs
simulations/sbml/: export_ferroptosis_sbml.py  ferroptosis_core.xml
simulations/sim-combo/: Cargo.toml  README.md
simulations/sim-combo-mech/: Cargo.toml  README.md
simulations/sim-combo-mech/src/: main.rs
simulations/sim-combo/src/: main.rs
simulations/sim-icd/: Cargo.toml  README.md
simulations/sim-icd/src/: main.rs
simulations/sim-invivo/: Cargo.toml  README.md
simulations/sim-invivo/src/: main.rs
simulations/sim-original/: Cargo.toml  README.md
simulations/sim-original/src/: main.rs
simulations/sim-spatial/: Cargo.toml  README.md
simulations/sim-spatial/src/: main.rs
simulations/sim-tissue-pk/: Cargo.toml  README.md
simulations/sim-tissue-pk/src/: main.rs
simulations/sim-tme/: Cargo.toml  README.md
simulations/sim-tme-3d/: Cargo.toml  README.md  expected_summary.sha256
simulations/sim-tme-3d/src/: main.rs  npy.rs  snapshot.rs
simulations/sim-tme/src/: main.rs
simulations/sim-tumor-pk/: Cargo.toml  README.md
simulations/sim-tumor-pk/src/: main.rs
simulations/sim-window/: Cargo.toml  README.md
simulations/sim-window/src/: main.rs
simulations/src/: main.rs
tests/: test_abc_posterior.py  test_acsl4_prevalence.py  test_calibrate.py  test_calibrate_kill_switch.py  test_calibrate_pk.py  test_calibration_data.py  test_calibration_regression.py  test_calibration_status_refs.py  test_dashboard_data.py  test_data_quality_scripts.py  test_depth_kill_physics_constants.py  test_detect_corpus_duplicates.py  test_doc_test_count.py  test_embed_evidence_leg.py  test_figure_traceability.py  test_flagship_figure_data.py  test_headline_sensitivity.py  test_headline_uncertainty.py  test_icb_param_map.py  test_identifiability_report.py  (+19 more)
(+12340 files in other folders)
