[project]
name = "cancer-research"
version = "0.1.0"
description = "Reproducible corpus-analysis and simulation workspace for open cancer research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "lxml>=6.1.1",
    "tqdm>=4.68.3",
    "PyMuPDF>=1.27.2.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "scipy>=1.18.0",
    "beautifulsoup4>=4.15.0",
    "feedparser>=6.0.0",
    "graphviz>=0.20.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
dashboard = [
    "streamlit>=1.58.0",
    "pandas>=3.0.3",
]

[tool.uv]
default-groups = ["dev"]
