[project]
name = "cancer-research"
version = "0.1.0"
description = "Reproducible Python pipeline for the cancer_research repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "feedparser>=6.0.0",
    "graphviz>=0.20.0",
    "lxml>=6.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
dashboard = [
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
]

[dependency-groups]
test = [
    "pytest>=9.1.1",
]

[tool.uv]
package = false
