[package]
name = "ferroptosis-sim"
version = "0.1.0"
edition = "2021"
description = "Monte Carlo simulation of ferroptosis sensitivity in OXPHOS vs glycolytic cancer cells"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
