[workspace]
members = [
    "ferroptosis-core",
    "sim-original",
    "sim-spatial",
    "sim-window",
    "sim-icd",
    "sim-combo",
    "sim-invivo",
    "sim-tissue-pk",
    "sim-combo-mech",
    "ferroptosis-python",
    "sim-tme",
    "sim-tumor-pk",
    "ferroptosis-ffi",
]
resolver = "2"

[workspace.dependencies]
rand = "0.8"
rand_distr = "0.4"
rayon = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
ferroptosis-core = { path = "ferroptosis-core" }
