[workspace]
members = [
    "ferroptosis-core",
    "sim-original",
    "sim-spatial",
    "sim-window",
    "sim-icd",
    "sim-combo",
    "sim-invivo",
    "sim-tissue-pk",
    "sim-combo-mech",
    "ferroptosis-python",
    "sim-tme",
    "sim-tme-3d",
    "sim-tumor-pk",
    "ferroptosis-ffi",
]
resolver = "2"

[workspace.dependencies]
rand = "0.8"
rand_distr = "0.4"
rayon = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.16"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
ferroptosis-core = { path = "ferroptosis-core" }

# #549: the test suite is dominated by sim-tme-3d's compute-heavy 60^3 x 180
# spatial integration tests, which run ~190x slower UNOPTIMIZED (the `cargo test`
# default is opt-level 0). Raising the test profile to opt-level 3 makes those
# tests run in seconds instead of ~25 min, WITHOUT dropping the safety checks:
# `debug-assertions` and `overflow-checks` stay ON (test-profile defaults, only
# `opt-level` is overridden here), so sim-tme-3d's `debug_assert!` invariant
# checks still fire — unlike a blanket `--release`. Costs slightly more compile
# time (cached by rust-cache in CI). The released binaries are unaffected.
[profile.test]
opt-level = 3
