[package]
name = "ferroptosis-core"
version = "0.2.0"
edition = "2021"
description = "Embeddable ferroptosis biochemistry engine for cancer simulation"
license = "MIT"
repository = "https://github.com/ELares/cancer_research"
keywords = ["ferroptosis", "cancer", "simulation", "biochemistry", "pharmacology"]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
csv = { workspace = true }
