[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ferroptosis-core"
version = "0.1.0"
description = "Mechanistic ferroptosis simulation engine for cancer research"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Ezequiel Lares" }]
keywords = ["ferroptosis", "cancer", "simulation", "biochemistry", "cell-death"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Repository = "https://github.com/ELares/cancer_research"
Issues = "https://github.com/ELares/cancer_research/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ferroptosis_core"
