[package]
name = "sim-combo-mech"
version = "0.1.0"
edition = "2021"
description = "Mechanistic drug combination modeling with Bliss synergy scoring"

[dependencies]
ferroptosis-core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
