[package]
name = "sim-combo"
version = "0.2.0"
edition = "2021"
description = "Combination therapy optimizer (SDT timing x anti-PD1 timing)"

[dependencies]
ferroptosis-core = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
