[package]
name = "sim-icd"
version = "0.2.0"
edition = "2021"
description = "ICD-immune cascade comparison across treatment modalities"

[dependencies]
ferroptosis-core = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
