[package]
name = "sim-spatial"
version = "0.2.0"
edition = "2021"
description = "Spatial tumor simulation with PDT/SDT energy physics and bystander ferroptosis"

[dependencies]
ferroptosis-core = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
