[package]
name = "sim-tissue-pk"
version = "0.1.0"
edition = "2021"
description = "Tissue-specific drug penetration and ferroptosis efficacy simulation"

[dependencies]
ferroptosis-core = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
