[package]
name = "sim-tme-3d"
version = "0.1.0"
edition = "2021"
description = "3D spheroid tumor microenvironment simulation — integrates O2/pH/stromal/immune-3d library primitives (#185-#190) into the manuscript-keystone 2D-vs-3D comparison binary (#195)"

[dependencies]
ferroptosis-core = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
rayon = { workspace = true }
