[package]
name = "sim-window"
version = "0.2.0"
edition = "2021"
description = "Ferroptosis vulnerability window dynamics post-chemotherapy"

[dependencies]
ferroptosis-core = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
